# BlitzMaster

./: .gitignore  CMakeLists.txt  README.md  msbuild.proj
code/Torsion/: AppPrefs.cpp  AutoCompExports.h  BuildVersion.h  ConnectDlg.cpp  ProjectDoc.cpp  Torsion.rc  Torsion.sln  Torsion.vcxproj.filters  XmlFile.cpp
code/wxWidgets/include/wx/msw/: debughlp.h
code/wxWidgets/lib/vc_lib/: wxbase26_odbc.lib  wxbase26_xml.lib  wxbase26d_xml.lib  wxjpegd.lib  wxmsw26_dbgrid.lib  wxmsw26_gl.lib  wxmsw26d_dbgrid.lib  wxpngd.lib  wxregexd.lib  wxzlib.lib  wxzlibd.lib
code/wxWidgets/src/common/: datetime.cpp
docs/: BlitzMaster.hhp
installer/: Torsion.iss
media/: .gitignore
src/BlitzMaster/: AboutDlg.cpp  AppPrefs.cpp  AppPrefs.h  AutoComp.h  AutoCompClass.cpp  AutoCompClass.h  AutoCompData.cpp  AutoCompData.h  AutoCompExports.cpp  AutoCompFunction.cpp  AutoCompFunction.h  AutoCompManager.cpp  AutoCompManager.h  AutoCompPage.cpp  AutoCompPage.h  AutoCompText.cpp  AutoCompText.h  AutoCompThread.cpp  AutoCompThread.h  AutoCompUtil.h  AutoCompVar.cpp  AutoCompVar.h  BlitzMaster.rc  BlitzMaster.rc2  BlitzMasterApp.cpp  BlitzMasterApp.h  Bookmark.cpp  Bookmark.h  Breakpoint.cpp  Breakpoint.h  BreakpointPropertyDlg.cpp  BreakpointPropertyDlg.h  BreakpointsPanel.cpp  BreakpointsPanel.h  BuildExportsDlg.cpp  BuildExportsThread.cpp  BuildVersion.h  CRC.h  CallTipInfo.cpp  CallTipInfo.h  (+86 more)
src/Torsion/: .gitignore  AboutDlg.cpp  AboutDlg.h  AppPrefs.cpp  AutoCompData.cpp  AutoCompExports.cpp  AutoCompExports.h  AutoCompManager.cpp  AutoCompThread.cpp  BuildExportsDlg.h  BuildExportsThread.cpp  BuildExportsThread.h  BuildVersion.h  CRC.cpp  CodeBrowserCtrl.cpp  ConfigDlg.cpp  ConnectDlg.cpp  ConnectDlg.h  Debugger.cpp  Debugger.h  DirWatcherWinNT.cpp  DocManager.cpp  DocManager.h  ExternalToolsDlg.h  FindInFilesDlg.cpp  FindReplaceDlg.h  FindResultsCtrl.cpp  FindResultsCtrl.h  FindSymbolDlg.cpp  FindSymbolDlg.h  FunctionCall.h  GotoDefDialog.cpp  GotoDefDialog.h  Icons.cpp  ImageUtil.h  MainFrame.cpp  MainFrame.h  OutputCtrl.cpp  OutputPanel.cpp  PreCompiled.h  (+43 more)
src/tinyxml2/tinyxml2/: tinyxml2.vcxproj
src/wxWidgets/contrib/src/stc/scintilla/src/: KeyWords.cxx
src/wxWidgets/lib/vc_lib/: wxbase26_net.lib  wxbase26d_net.lib  wxbase26d_odbc.lib  wxexpat.lib  wxexpatd.lib  wxjpeg.lib  wxmsw26_adv.lib  wxmsw26_media.lib  wxmsw26_qa.lib  wxmsw26d_gl.lib  wxmsw26d_media.lib  wxmsw26d_qa.lib  wxmsw27_propgrid.lib  wxmsw27d_propgrid.lib  wxpng.lib  wxregex.lib  wxtiff.lib  wxtiffd.lib
